fixes hour/line alignment in visual schedule for 3-hour schedules

--- a/myuw_mobile/static/css/mobile.less
+++ b/myuw_mobile/static/css/mobile.less
@@ -737,7 +737,7 @@ body {
       top: 0px;
     }
     
-    .six-hour .day-label { height: 14%; }
+    #final_exam_schedule_card .six-hour .day-label { height: 14%; }
     
     .visual-course {
       width: 100%;
